[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/maps/worldmap.gd" type="Script" id=1]
[ext_resource path="res://menus/buttons/button_back.tscn" type="PackedScene" id=2]

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="button_back" parent="." index="0" instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -960.0
margin_right = -360.0
margin_bottom = -874.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="Label" type="Label" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "WORLD MAP"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_forest" type="Button" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 120.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Tackbank Forest"
flat = false
align = 1

[node name="button_coast" type="Button" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 120.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Shoach Coast"
flat = false
align = 1

[node name="button_foothills" type="Button" parent="VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 120.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Verdant Foothills"
flat = false
align = 1

[connection signal="pressed" from="button_back" to="." method="_on_button_back_pressed"]

[connection signal="pressed" from="VBoxContainer/button_forest" to="." method="_on_button_forest_pressed"]

[connection signal="pressed" from="VBoxContainer/button_coast" to="." method="_on_button_coast_pressed"]


